--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "google-cloud-bigquery (>=3.38.0,<4.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "db-dtypes (>=1.4.3,<2.0.0)",
-    "transformers (>=4.57.0,<5.0.0)"
+    "transformers (>=4.57.0,<5.0.0)",
+    "textdistance (>=4.6.3,<5.0.0)",
+    "nltk (>=3.9.2,<4.0.0)"
 ]
 
 
