--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "db-dtypes (>=1.4.3,<2.0.0)",
     "transformers (>=4.57.0,<5.0.0)",
     "textdistance (>=4.6.3,<5.0.0)",
-    "nltk (>=3.9.2,<4.0.0)"
+    "nltk (>=3.9.2,<4.0.0)",
+    "matplotlib (>=3.10.7,<4.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "statsmodels (>=0.14.5,<0.15.0)"
 ]
 
 
