--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "nltk (>=3.9.2,<4.0.0)",
     "matplotlib (>=3.10.7,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "statsmodels (>=0.14.5,<0.15.0)"
+    "statsmodels (>=0.14.5,<0.15.0)",
+    "scikit-learn (>=1.8.0,<2.0.0)",
+    "wordcloud (>=1.9.4,<2.0.0)"
 ]
 
 
