--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "statsmodels (>=0.14.5,<0.15.0)",
     "scikit-learn (>=1.8.0,<2.0.0)",
-    "wordcloud (>=1.9.4,<2.0.0)"
+    "wordcloud (>=1.9.4,<2.0.0)",
+    "tabulate (>=0.9.0,<0.10.0)"
 ]
 
 
